// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should not trigger the click event when disabled 1`] = `
<button
  className=" css-1rn65c0"
  disabled={true}
  onClick={null}
>
  My content
</button>
`;

exports[`<Button /> should render the button 1`] = `
<button
  className=" css-1rn65c0"
  disabled={false}
  onClick={null}
>
  My content
</button>
`;

exports[`<Button /> should render the button in disabled state 1`] = `
<button
  className=" css-1rn65c0"
  disabled={true}
  onClick={null}
>
  My content
</button>
`;

exports[`<Button /> should trigger the click event 1`] = `
<button
  className=" css-1rn65c0"
  disabled={false}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
>
  My content
</button>
`;
